# Bubba_Nodes

./: .gitignore  MANIFEST.in  README.md  __init__.py  prompt_presets.json  pyproject.toml  todo.md
.github/: ISSUE_TEMPLATE.md  RELEASE.md
docs/: windows-dev.md
src/bubba_nodes/: nodes.py
src/bubba_nodes/models/: __init__.py  metadata.py
src/bubba_nodes/nodes/: __init__.py  checkpoint.py  empty_latent.py  filename.py  load_image.py  metadata.py  overlay.py  prompt.py  prompt_metadata.py  sampler.py  save_image.py  watermark.py
src/bubba_nodes/utils/: __init__.py  asset_viewer.py  image_ops.py  prompt_analysis.py  prompting.py
tests/: __init__.py  conftest.py  test_asset_viewer.py  test_bubba_nodes.py
tools/: dev_setup.ps1  run_comfy.ps1  run_tests.ps1
web/comfyui/: asset_viewer.css  asset_viewer.html  autocomplete.js  checkpoint_menu.js  danbooru_cache.csv  settings.js
web/comfyui/autocomplete/: cache.js  csv.js  idb.js  search.js  ui.js  utils.js
web/docs/Example/: en.md
